# QEmbed

./: .gitignore  Architecture.md  Project.md  README.md  pyproject.toml  setup.py
docs/: README.md  api_reference.md  installation.md  quickstart.md  validation_summary.md
docs/qembed/: README.md  overview.md
docs/qembed/core/: README.md  collapse_layers.md  core_modules.md  entanglement.md  measurement.md  quantum_embeddings.md
docs/qembed/evaluation/: README.md  overview.md
docs/qembed/training/: README.md  quantum_trainer.md
docs/qembed/utils/: README.md
examples/: basic_usage.py  quantum_bert_example.py
examples/benchmarks/: uncertainty_quantification.py  word_sense_disambiguation.py
qembed/: __init__.py
qembed/core/: __init__.py  collapse_layers.py  entanglement.py  measurement.py  quantum_embeddings.py
qembed/evaluation/: __init__.py  aggregation.py  base_evaluator.py  classification_evaluator.py  comparison.py  embedding_evaluator.py  evaluation_metrics.py  mlm_evaluator.py  pipeline.py  quantum_evaluation.py  reporting.py  superposition_analyzer.py  uncertainty_analyzer.py
qembed/training/: __init__.py  losses.py  optimizers.py  quantum_trainer.py
qembed/utils/: __init__.py  metrics.py  quantum_utils.py  visualization.py
tests/: __init__.py  test_core.py  test_coverage_summary.md  test_evaluation.py  test_models.py  test_quantum_embeddings.py  test_training.py  test_utils.py
