[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qembed"
dynamic = ["version"]
description = "Quantum-Enhanced Embeddings for Natural Language Processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "QEmbed Team", email = "contact@qembed.ai"}
]
maintainers = [
    {name = "QEmbed Team", email = "contact@qembed.ai"}
]
keywords = [
    "quantum",
    "embeddings",
    "nlp",
    "natural-language-processing",
    "machine-learning",
    "deep-learning",
    "pytorch",
    "transformer",
    "bert",
    "polysemy",
    "uncertainty",
    "superposition",
    "entanglement"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "transformers>=4.20.0",
    "tokenizers>=0.12.0",
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
    "wandb>=0.13.0",
    "tensorboard>=2.8.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "pre-commit>=2.15.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.15.0",
    "sphinx-autodoc-typehints>=1.12.0",
]
examples = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/qembed/qembed"
Documentation = "https://qembed.readthedocs.io/"
Repository = "https://github.com/qembed/qembed"
"Bug Tracker" = "https://github.com/qembed/qembed/issues"

[project.scripts]
qembed-demo = "qembed.examples.basic_usage:main"

[tool.setuptools]
packages = ["qembed"]

[tool.setuptools.package-data]
qembed = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "qembed.__version__"}

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["qembed"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["qembed"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
